# ey-prysmian-mi-hub-demo

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
agents/: Dockerfile  base.py  mining_cable_specialist.py  news_finder.py
agents/llm/: client.py
agents/tools/: commodity_query.py  estimate.py  relevance_score.py  writeback.py
backend/: Dockerfile  Dockerfile.prod  main.py  settings.py
backend/api/: agents.py  alerts.py  countries.py  evidence.py  health.py  news.py  projects.py  review.py  search.py  trends.py
backend/db/: connection.py  models.py
backend/schemas/: agents.py  countries.py  evidence.py  news.py  projects.py  trends.py
backend/tests/: smoke.py
data/bronze/: ingest_europacable_rss.py  ingest_mining_com_rss.py  ingest_westmetall_copper.py  sources_catalog.yaml
data/migrations/: 001_pgvector_extension.sql  002_bronze_schema.sql  003_silver_schema.sql  004_gold_schema.sql  005_audit_schema.sql
data/silver/: news_clean.py
docs/: DEPLOY_RENDER.md  FUNCTIONAL_ANALYSIS.docx  FUNCTIONAL_ANALYSIS.md  KPI_CATALOG.docx  KPI_CATALOG.md  USER_MANUAL.docx  USER_MANUAL.md  architecture.md  critical-decisions.md  data-sources.md  demo-script.md  scaffolder-map.md
docs/adr/: ADR-001-stack-react-fastapi.md  ADR-003-pgvector-vs-vector-search.md  (+5 more)
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: extract_mockup_assets.py  init_db.py  run_agent.py  seed_demo_data.py
(+44 files in other folders)
