[project]
name = "ey-prysmian-mi-hub-demo"
version = "0.1.0"
description = "Production-aligned scaffold for Prysmian Marketing Intelligence Hub"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "pgvector==0.3.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "anthropic==0.39.0",
  "httpx==0.27.2",
  "feedparser==6.0.11",
  "rapidfuzz==3.10.1",
  "apscheduler==3.10.4",
  "python-dotenv==1.0.1",
  "voyageai==0.3.2",
  "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests", "agents/tests"]

[tool.uv]
package = false
